--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>  
+    <style>
+    body {
+        background-color: black;
+    }
+    h3,h1 {
+        color: white;
+    }
+    </style>
 </head>
 <body>
-    <h1>Hei!!</h1>
+    <h1>Nannestad videregåne skole</h1>
+    <h3>dette er to bilder av hovedinganeng til Nannestad vgs.</h3>
+    <img src="/bilder/mitt bilde av skolen 1.png" width="25%" alt="bilde av en del av en bygning.">
+    <img src="/bilder/mitt bilde av skolen 2.png" width="25%" alt="bilde av ingangen til ei bygning.">
+    <br><br><br>
+    <h3>dette er to roterende gif-er av hovedinganeng til Nannestad vgs.</h3>
+    <img src="/video/gif/gif 1 av skolen.gif" width="25%" alt="gif som roterer mot venstre av en skole.">
+    <img src="/video/gif/gif 2 av skolen .gif" width="25%" alt="gif som roterer mot høgre av en skole.">
+    <br><br><br>
+    <h3>dette er et 360 degrees bilde av bak ingangen til  Nannestad vgs.Du kan dra på bilde får og rotere det.</h3>
+        <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/l2LORJbH9Q"></iframe>
+    
 </body>
 </html>
